authorization system alpha

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -18,6 +18,11 @@ img {
     user-drag: none;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
 /* SMART SCROLL */
 .smart-scroll {
     position: fixed;
