--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -395,6 +395,7 @@ footer .copyright {
     outline: none;
     background-color: #4e5061;
     width: 100%;
+    padding-right: calc(1.5em + .75rem);
 }
 
 /* CARD */
