--- a/src/main/webapp/WEB-INF/view/general/html/admin-scripts.html
+++ b/src/main/webapp/WEB-INF/view/general/html/admin-scripts.html
@@ -4,5 +4,9 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
+        integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
+        crossorigin="anonymous"></script>
+<script>dayjs().format()</script>
 <script src="/resources/js/notify.js"></script>
 <script src="/resources/js/script.js"></script>
