complete, event module, improving outcomeResult module

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -633,6 +633,10 @@ footer .copyright {
     border: none;
 }
 
+body.modal-open {
+    position: inherit;
+}
+
 /* SPECIAL MODALS */
 .login-form a {
     font-style: italic;
