--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -682,6 +682,7 @@ body.modal-open {
     background-size: 200% 200%;
     animation: gradient 8s ease-in-out infinite;
 }
+
 .bet-preview .team-logo {
     padding: 2px;
     border-radius: 5px;
@@ -692,8 +693,21 @@ body.modal-open {
     width: 60px;
 }
 
-.bet-preview .date {
-    color: red;
+.bet-outcome,
+.bet-confirm {
+    border-radius: 5px;
+    padding: 2px;
+    margin-bottom: 10px;
+    background-color: #4e5061;
+}
+
+.bet-outcome .outcome-name {
+    color: #99c6ff;
+}
+
+.bet-outcome .odds {
+    font-weight: bold;
+    border-bottom: 2px solid #29864e;
 }
 
 /* FLAGS */
