--- a/src/main/webapp/WEB-INF/view/general/html/scripts.html
+++ b/src/main/webapp/WEB-INF/view/general/html/scripts.html
@@ -8,4 +8,5 @@
         integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
         crossorigin="anonymous"></script>
 <script>dayjs().format()</script>
+<script src="/resources/js/notify.js"></script>
 <script src="/resources/js/script.js"></script>
