--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -255,6 +255,35 @@ img {
     border-radius: 0 0 5px;
 }
 
+.left-winner,
+.right-winner {
+    position: relative;
+}
+
+.left-winner::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: -10%;
+    left: -10%;
+    background-image: url("/resources/assets/interface/winner.png");
+    background-size: 100% 100%;
+    height: 30px;
+    width:30px;
+}
+
+.right-winner::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: -10%;
+    right: -10%;
+    background-image: url("/resources/assets/interface/winner.png");
+    background-size: 100% 100%;
+    height: 30px;
+    width:30px;
+}
+
 .event .team,
 .event .center {
     font-weight: bold;
@@ -494,12 +523,22 @@ img {
     font-weight: bold;
 }
 
+.list-group-item[disabled] {
+    color: #a09b9b;
+}
+
 #page-content-wrapper {
     width: 100%
 }
 
 #wrapper.toggled #sidebar-wrapper {
     display: none;
+}
+
+@media all and (min-width: 768px) {
+    .flex-column #sidebar-wrapper {
+        max-width: 300px;
+    }
 }
 
 .form-card input,
@@ -545,15 +584,39 @@ img {
 
 .form-card input:focus,
 .form-card textarea:focus,
-.pay-input-group.input-group input:focus {
+.pay-input-group.input-group input:focus,
+.form-floating input:focus {
     box-shadow: 0px 0px 0px 2px #8346db !important;
 }
 
 input:focus + label {
     font-weight: 500;
-    color: #8346db;
+    color: #ab7cfa;
 }
 
+/* --ACCOUNT SETTINGS CONTAINER-- */
+.profile-info {
+    border-radius: 5px;
+    padding: 10px;
+    width: auto;
+    background-color: #6d8095;
+}
+
+.profile-info .profile-avatar {
+    margin-bottom: 30px;
+    background-color: white;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+
+.profile-info .profile-avatar img {
+    width: 100%;
+    height: 100%;
+    /*object-fit: contain;*/
+}
 
 /* FOOTER */
 footer {
@@ -682,6 +745,7 @@ footer .copyright {
 .btn-check:active+.btn-secondary,
 .btn-check:checked+.btn-secondary {
     background-color: #29864e;
+    font-weight: bold;
 }
 
 /* INPUT FIELD */
@@ -691,6 +755,11 @@ footer .copyright {
     display: flex;
     align-items: center;
     border: 2px solid rgba(226, 212, 232, 0.8);
+}
+
+.input-field .input-wrapper {
+    width: 100%;
+    margin-right: 10px;
 }
 
 .custom-controls input::placeholder {
